--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-oauth-toolkit==2.2.0
 django-templated-mail==1.1.1
 django-vies==6.0.2
 djangorestframework==3.14.0
+djangorestframework-gis==0.18
 djangorestframework-simplejwt==5.2.2
 drf-social-oauth2==1.2.1
 ecdsa==0.18.0
